fix: Scrollbar gutter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,4 +50,5 @@ body {
 * {
   scrollbar-width: thin;
   scrollbar-color: #bdbdbd transparent;
+  scrollbar-gutter: stable both-edges;
 }
